<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/neighbour_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:background="#F0F0F3"
    >

    <ImageView
        android:id="@+id/neighbour_activity_avatar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/neighbour_activity_scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/neighbour_avatar_img_description"
        />

    <TextView
        android:id="@+id/neighbour_activity_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/neighbour_activity_scrollView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textStyle="bold"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/neighbour_activity_favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/neighbour_activity_avatar"
        app:layout_constraintEnd_toEndOf="@id/neighbour_activity_avatar"
        app:layout_constraintTop_toBottomOf="@id/neighbour_activity_avatar"
        android:backgroundTint="@android:color/white"
        app:srcCompat="@drawable/ic_star_grey_24dp"
        app:borderWidth="0dp"
        />

    <ScrollView
        android:id="@+id/neighbour_activity_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintTop_toBottomOf="@id/neighbour_activity_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_text_independant_layouts"
                >

                <TextView
                    android:id="@+id/neighbour_activity_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#33AAAAAA"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    />

                <TextView
                    android:id="@+id/neighbour_activity_address_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_location_accentcolor_24dp"
                    android:drawablePadding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

                <TextView
                    android:id="@+id/neighbour_activity_phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_phone_accentcolor_24dp"
                    android:drawablePadding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

                <TextView
                    android:id="@+id/neighbour_activity_facebook_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableStart="@drawable/ic_facebook_accentcolor_24dp"
                    android:drawablePadding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_text_independant_layouts"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/aboutMe_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#33AAAAAA"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    />

                <TextView
                    android:id="@+id/neighbour_activity_aboutMe_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>